@@ -22,6 +22,7 @@ import io.openaev.injector_contract.fields.ContractElement;
 import io.openaev.injector_contract.fields.ContractExpectations;
 import io.openaev.rest.domain.enums.PresetDomain;
 import java.io.InputStream;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -61,7 +62,8 @@ public class EmailContract extends Contractor {
     // Contracts
     ContractExpectations expectationsField =
         expectationsField(
-            List.of(), List.of(this.expectationBuilderService.buildManualExpectation()));
+            Collections.emptyList(),
+            List.of(this.expectationBuilderService.buildManualExpectation()));
     ContractConfig contractConfig = getConfig();
     // Standard contract
     List<ContractElement> standardInstance =
